# kreddit

./: .gitignore  CMakeLists.txt  README.md  org.kde.kreddit.desktop
src/: CMakeLists.txt  Main.qml  main.cpp
src/api/: redditmodel.cpp  redditmodel.h
src/ui/: CMakeLists.txt  PostDelegate.qml
